--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -40,3 +40,19 @@ jobs:
             docker compose down
             docker compose build
             docker compose up -d
+
+      - name: Send Telegram Notification
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          url=${{ secrets.PROD_HOST }}
+
+          MESSAGE="🚀 Deployment Success! 🚀 %0A"
+          MESSAGE+="├ Branch: ${{ github.ref }} %0A"
+          MESSAGE+="├ Commit Message: ${{ github.event.head_commit.message }} %0A"
+          MESSAGE+="├ Deployed by: ${{ github.actor }}%0A"
+          MESSAGE+="├ Date and Time: $(date +'%Y-%m-%d %H:%M:%S') %0A"
+          MESSAGE+="└ Deployment URL: $url %0A"
+
+          curl -s -X POST "https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendMessage" -d "chat_id=$TELEGRAM_CHAT_ID" -d "text=$MESSAGE"
