--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "embla-carousel-react": "^7.0.5",
     "graphql": "^16.6.0",
     "history": "5",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
