add cards for order, dropoff and shipments

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@apollo/client": "^3.7.0",
     "@apollo/react-hooks": "^4.0.0",
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@mantine/carousel": "^5.8.0",
     "@mantine/core": "^5.8.0",
     "@mantine/dates": "^5.8.0",
@@ -20,7 +20,8 @@
     "@mantine/rte": "^5.5.4",
     "@mantine/spotlight": "^5.8.0",
     "@mantine/tiptap": "^5.8.0",
-    "@mui/material": "^5.15.12",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "@react-google-maps/api": "^2.13.1",
     "@tabler/icons": "^1.112.0",
     "@testing-library/jest-dom": "^5.16.5",
