change in docker and nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,8 @@
 server {
   listen 80;
-  server_name ant.gsms.et;
+  server_name admin.ant.et;
   location / {
-    root   /usr/share/nginx/html;
+    root   /usr/share/nginx/html/admin;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html =404;
   }
