--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
 version: '3.6'
-
 services:
-
-  admin-dashboard:
+  b2b-admin:
     restart: unless-stopped
     build:
       context: .
     ports:
-      - "80:80"
+      - "83:80"
