--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,15 @@
 version: '3.6'
 services:
   b2b-admin:
+    image: b2b-admin
     restart: unless-stopped
     build:
       context: .
-    ports:
-      - "83:80"
+    expose:
+      - "5000" 
+    networks:
+      - proxy-network
+networks:
+  proxy-network:
+    external: true
+
