--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,13 @@
 server {
-  listen 80;
+  listen 5000;
+  listen [::]:5000;
+  
   server_name admin.ant.et;
+  
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html =404;
+    
   }
 }
