--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/styles": "^5.15.17",
     "@react-google-maps/api": "^2.13.1",
     "@tabler/icons": "^1.112.0",
+    "@tabler/icons-react": "^3.26.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
