--- a/package.json
+++ b/package.json
@@ -74,7 +74,10 @@
   },
   "devDependencies": {
     "autoprefixer": "9",
-    "postcss": "7",
+    "postcss": "^8.5.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^4.3.0",
+    "postcss-preset-env": "^10.1.3",
     "serve": "^14.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
