--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "embla-carousel-react": "^7.0.5",
     "graphql": "^16.6.0",
     "history": "5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
@@ -46,7 +48,8 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "tabler-icons-react": "^1.55.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
